Fixes to button text overflowing and top bar

--- a/src/assets/scss/document_edit.scss
+++ b/src/assets/scss/document_edit.scss
@@ -194,7 +194,6 @@
                 .button-text {
                   font-size: 14px;
                   font-weight: 500;
-                  max-width: 70%;
                 }
               }
             }
